fixed text-align in add contact button

--- a/css/contact.css
+++ b/css/contact.css
@@ -66,7 +66,6 @@ body {
     display: flex;
     width: 100%;
     background-color: #F6F7F8;
-    ;
 }
 
 .container-template {
@@ -88,7 +87,7 @@ body {
 
 .headline {
     font-family: 'Inter', sans-serif;
-    font-weight: 400px;
+    font-weight: 400;
     font-size: 20px;
     line-height: 24px;
     width: 319px;
@@ -108,7 +107,8 @@ body {
     height: 32px;
     cursor: pointer;
 }
-.help-button:hover{
+
+.help-button:hover {
     scale: 1.2;
 }
 
@@ -210,7 +210,7 @@ body {
     gap: 8px;
     font-size: 16px;
     font-weight: 400;
-  }
+}
 
 .legal-notice {
     display: flex;
@@ -223,7 +223,7 @@ body {
     font-weight: 400;
 }
 
-.font-size{
+.font-size {
     font-size: 16px;
     font-weight: 400;
     line-height: 19.2;
@@ -234,36 +234,37 @@ body {
 .add-contact-button {
     width: 352px;
     height: 56px;
-    top: 22.5px;
-    left: 52px;
-    padding: 12px;
-    gap: 16px;
-    border-radius: 10px;
     background: #2A3647;
     border: 1px solid #2A3647;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
     animation-timing-function: ease-out;
     animation-duration: 300ms;
-    cursor: pointer;
+}
+
+.add-contact-button .button-text {
+    color: white;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
 .button-text {
-    width: 175px;
-    height: 25px;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 21px;
     font-weight: 700;
     line-height: 25.2px;
-    text-align: left;
     color: #FFFFFF;
-
 }
 
 .button-icon {
-    
     width: 32px;
     height: 32px;
-    top: 12px;
-    left: 255.5px;
 }
 
 #contactSection {
@@ -287,7 +288,7 @@ body {
 
 .contact-list-container {
     width: 400px;
-    height: 800px; /* height reduced to fit within #contactSection */
+    height: 800px;
     overflow-y: auto;
     overflow-x: hidden;
     padding: 32px;
@@ -319,7 +320,6 @@ body {
     background: #FFFFFF;
     animation-timing-function: ease-in-out;
     animation-duration: 100ms;
-
 }
 
 .initials-container {
@@ -337,7 +337,6 @@ body {
     font-weight: 400;
     line-height: 14.4px;
     text-align: center;
-
 }
 
 .contact-info {
@@ -349,7 +348,6 @@ body {
     border-radius: 10px;
     animation-timing-function: ease-in-out;
     animation-duration: 100ms;
-
 }
 
 .contact-names {
@@ -359,7 +357,6 @@ body {
     font-weight: 400;
     line-height: 24px;
     text-align: left;
-
 }
 
 .alphabet-container {
@@ -386,12 +383,10 @@ body {
 
 .contact-email {
     width: 140px;
-    height: 19px;;
+    height: 19px;
     color: #007CEE;
     font-size: 16px;
     font-weight: 400;
     line-height: 19.2px;
     text-align: left;
-
 }
-
